# tvc_drone

./: .gitignore  .gitmodules  README.md
drone_fsm/: CMakeLists.txt  package.xml
drone_fsm/src/: drone_fsm_node.cpp
drone_gnc/: CMakeLists.txt  README.md  package.xml
drone_gnc/config/: control_mpc_parameters.yaml  control_tracking_mpc_parameters.yaml  filter_parameters.yaml  guidance_mpc_parameters.yaml  mpc_config.yaml  mpc_parameters.yaml  optitrack_filter_parameters.yaml  rocket_parameters.yaml
drone_gnc/launch/: control_devel.launch  drone_gnc.launch  drone_mavros_interface.launch  kalman_tuner.launch
drone_gnc/msg/: DroneControl.msg  DroneExtendedState.msg  DroneState.msg  DroneStateStamped.msg  DroneTrajectory.msg  DroneWaypointStamped.msg  FSM.msg  Sensor.msg
drone_gnc/scripts/: actuators_tests.py  avionic_bridge_node.py  esc_calibration.py
drone_gnc/src/: CMakeLists.txt
drone_gnc/src/control/: CMakeLists.txt  backup_controller.hpp  backup_controller_old.hpp  control_solver.hpp  drone_control_node.cpp  drone_control_node.h  drone_control_ocp.hpp  drone_mpc.cpp  drone_mpc.h  drone_mpc_settings.hpp  low_level_control_node.py  mpc_utils.h
drone_gnc/src/control/mpc/: CMakeLists.txt  control_solver.hpp  drone_control_ocp.hpp  drone_mpc.cpp  drone_mpc.h  mpc_utils.hpp  polympc_redef.hpp
drone_gnc/src/guidance/: CMakeLists.txt  drone_guidance.cpp  drone_guidance.h  drone_guidance_node.cpp  drone_guidance_node.h  drone_guidance_ocp.hpp  drone_guidance_save.cpp  drone_guidance_settings.hpp  fixed_guidance_node.cpp  guidance_solver.hpp
drone_gnc/src/guidance/guidance_mpc/: CMakeLists.txt  drone_guidance_mpc.cpp  drone_guidance_mpc.h  drone_guidance_ocp.hpp  guidance_polympc_redef.hpp  guidance_solver.hpp
drone_gnc/src/models/: CMakeLists.txt  drone_model.hpp  rocket_model.hpp
drone_gnc/src/navigation/: CMakeLists.txt  drone_EKF.cpp  drone_EKF.h  drone_EKF.hpp  drone_EKF_optitrack_old.hpp  drone_navigation_node.cpp  kalman_tuner.cpp  navigation_settings.hpp
drone_gnc/src/navigation/optitrack/: CMakeLists.txt  drone_EKF_optitrack.cpp  drone_EKF_optitrack.h  drone_EKF_optitrack.hpp  drone_navigation_node_optitrack.cpp  kalman_tuner.cpp
drone_gnc/src/navigation/pixhawk/: CMakeLists.txt  drone_EKF_pixhawk.hpp  drone_navigation_node_pixhawk.cpp  drone_navigation_node_pixhawk.h
drone_gnc/src/ros_nodes/: CMakeLists.txt
drone_gnc/src/ros_nodes/control/: drone_control_node.cpp  drone_control_node.h  load_mpc_settings.hpp
drone_gnc/src/ros_nodes/guidance/: drone_guidance_node.cpp  drone_guidance_node.h  fixed_guidance_node.cpp  load_guidance_settings.hpp
drone_gnc/src/ros_nodes/navigation/: drone_navigation_node.cpp  drone_navigation_node.h  drone_navigation_node_old.cpp  drone_navigation_node_old.h  drone_navigation_node_optitrack_old.cpp  load_navigation_settings.hpp
drone_gnc/src/ros_nodes/utils/: CMakeLists.txt  drone_fsm_node.cpp  drone_mavros_interface.cpp  kalman_tuner_old.cpp
drone_gnc/src/tests/: CMakeLists.txt  control_mpc_test.cpp  full_trajectory_tracking_test.cpp  guidance_test.cpp  matplotlibcpp.h  plot_test_results.py  readme.md  terminal_cost_test.cpp  test_settings.h
drone_gnc/src/utils/: CMakeLists.txt  avionic_bridge_node.py  control_devel.cpp  drone_fsm_node.cpp  drone_mavros_interface.cpp  mpc_utils.hpp
drone_gnc/src/utils/drone_dome/: CMakeLists.txt  simple_vrpn_client.cpp
drone_gnc/srv/: GetWaypoint.srv  InterpolateControlSpline.srv  KalmanSimu.srv  SetFSM.srv
drone_optimal_control/: .gitmodules  CMakeLists.txt  README.md  package.xml
drone_optimal_control/config/: mpc_config_fixed_guidance_tracking.yaml
drone_optimal_control/launch/: control_devel.launch  drone_optimal_control.launch
drone_optimal_control/src/: CMakeLists.txt  drone_control_node.cpp  drone_guidance.cpp  drone_guidance_node.cpp  drone_mpc.cpp  fixed_guidance_node.cpp  mpc_utils.cpp
drone_optimal_control/src/control/: CMakeLists.txt  backup_controller_old.hpp  drone_control_ocp.hpp  drone_mpc.cpp  drone_mpc.h  drone_mpc_settings.hpp  mpc_utils.cpp  mpc_utils.h
drone_optimal_control/src/guidance/: drone_guidance.cpp  drone_guidance.h  drone_guidance_ocp.hpp  drone_guidance_settings.hpp
drone_optimal_control/src/models/: drone_model.hpp
drone_optimal_control/src/navigation/: drone_EKF_old.hpp
drone_optimal_control/src/ros_nodes/: CMakeLists.txt
drone_optimal_control/src/ros_nodes/control/: drone_control_node.cpp  drone_control_node.h  load_mpc_settings.hpp
drone_optimal_control/src/ros_nodes/guidance/: drone_guidance_node.cpp  drone_guidance_node.h  fixed_guidance_node.cpp  load_guidance_settings.hpp
drone_optimal_control/src/ros_nodes/navigation/: drone_navigation_node_old.cpp  drone_navigation_node_old.h  drone_navigation_node_optitrack_old.cpp  load_navigation_settings.hpp
drone_optimal_control/src/ros_nodes/utils/: CMakeLists.txt  kalman_tuner_old.cpp  load_drone_props.hpp  simulator_interface_old.cpp
drone_optimal_control/src/ros_nodes/utils/drone_dome/: CMakeLists.txt
drone_optimal_control/src/tests/: CMakeLists.txt  control_mpc_simulation_test.cpp  control_mpc_test.cpp  full_trajectory_tracking_test.cpp  guidance_test.cpp  matplotlibcpp.h  readme.md  terminal_cost_test.cpp  test_settings.h
drone_simulator_interface/: CMakeLists.txt  README.md  package.xml
drone_simulator_interface/src/: CMakeLists.txt  simulator_interface.cpp
drone_utils/: CMakeLists.txt  README.md  package.xml
lqr_control/: CMakeLists.txt
lqr_gnc/: README.md
lqr_with_integrator_control/: CMakeLists.txt
lqr_with_integrator_gnc/: .clang-format  README.md
mavros_interface/: CMakeLists.txt  package.xml
model_comparisons/: CMakeLists.txt  compare.launch  package.xml
optitrack_ekf/: CMakeLists.txt  package.xml
optitrack_ekf/GUI/: optitrack_ekf.perspective
optitrack_ekf/launch/: optitrack_ekf.launch
optitrack_ekf/src/: CMakeLists.txt  ekf_node.cpp  extended_kalman_filter.hpp  optitrack_client.cpp
optitrack_ekf/src/vrpn/: simple_vrpn_client.cpp
pid_control/: CMakeLists.txt  package.xml
pid_gnc/: .gitmodules  README.md
(+324 files in other folders)
